--- a/package.json
+++ b/package.json
@@ -7,6 +7,24 @@
   "devDependencies": {
     "@types/papaparse": "^5.5.2"
   },
-  "build": "tsc -b && vite build"
-  
+  "build": "tsc -b && vite build",
+  "name": "karutag",
+  "version": "1.0.0",
+  "description": "I made this site to try learning how IndexedDB and Dexie work. \r While learning the flowchart was fun and made sense, I could never remember the syntaxes by heart.",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ray1371/karutag.github.io.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/ray1371/karutag.github.io/issues"
+  },
+  "homepage": "https://github.com/ray1371/karutag.github.io#readme"
 }
